Document PPDG/src/objects/Docugen_EBS_Template__c.object
<CustomObject>
    <fields>
        <fullName>EBS_Template__c</fullName>
        <label>EBS Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Map__c</fullName>
        <label>Field Map</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Docugen EBS Template</label>
    <listViews>
        <fullName>Template_Names</fullName>
        <columns>NAME</columns>
        <columns>EBS_Template__c</columns>
        <columns>Template__c</columns>
        <filterScope>Everything</filterScope>
        <label>Template Names</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DOCU{0000}</displayFormat>
        <label>Docugen EBS Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docugen EBS Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>